--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -5,7 +5,7 @@
    "id": "41fd6903-91d8-4981-b04d-320296c44386",
    "metadata": {},
    "source": [
-    "Task: fit the data below with a linear regression model"
+    "Problem: Fit the data below with a linear regression model"
    ]
   },
   {
@@ -29,17 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 13,
    "id": "6b8dd81b-9acc-4789-ba31-de6477bf4228",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LinearRegression"
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 76,
    "id": "5f278e90-524c-419d-8223-20970c4f5c74",
    "metadata": {},
    "outputs": [
@@ -49,36 +50,52 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = LinearRegression()\n",
-    "model.fit(X, y)"
+    "model1 = LinearRegression()\n",
+    "model1.fit(X, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 78,
    "id": "bec41ba0-5ca4-44d8-a521-270601c50a6a",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([22.659298, 23.773872, 25.57186 , 30.986935, 50.008038],\n",
-       "      dtype=float32)"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[22.659298 23.773872 25.57186  30.986935 50.008038]\n"
+     ]
     }
    ],
    "source": [
-    "model.predict(X)"
+    "y_preds = model1.predict(X)\n",
+    "print(y_preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "81605896-da4a-40c5-9b81-535093196122",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.089045\n"
+     ]
+    }
+   ],
+   "source": [
+    "mse = mean_squared_error(y, y_preds)\n",
+    "print(mse)"
    ]
   },
   {
@@ -91,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 103,
    "id": "f84496e6-0cab-4012-932a-422611abac33",
    "metadata": {},
    "outputs": [],
@@ -102,8 +119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "id": "766a7140-3d27-45c2-b692-b82be173d2fb",
+   "execution_count": 127,
+   "id": "9faacb46-3f58-4a6c-ad59-1c3345fbcd83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,75 +132,60 @@
     "    def forward(self, x):\n",
     "        # Forward pass\n",
     "        out = self.linear(x)\n",
-    "        return out"
+    "        return out\n",
+    "\n",
+    "model2 = LinearModel()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "id": "c46617ad-9601-45e6-9ac0-8373c6b8b934",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = LinearModel()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 128,
    "id": "1d89b670-dab9-453f-b3d8-f3a36fcb7966",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Peng\\AppData\\Local\\Temp/ipykernel_1336/1257109701.py:1: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  X = torch.tensor(X).type(torch.float)\n",
-      "C:\\Users\\Peng\\AppData\\Local\\Temp/ipykernel_1336/1257109701.py:2: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  y=torch.tensor(y).type(torch.float)\n"
+      "tensor([[ 1.,  2.],\n",
+      "        [ 2.,  5.],\n",
+      "        [ 3.,  3.],\n",
+      "        [ 7.,  8.],\n",
+      "        [21., 25.]]) \n",
+      " tensor([20., 25., 28., 30., 50.])\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "(tensor([[ 1.,  2.],\n",
-       "         [ 2.,  5.],\n",
-       "         [ 3.,  3.],\n",
-       "         [ 7.,  8.],\n",
-       "         [21., 25.]]),\n",
-       " tensor([20., 25., 28., 30., 50.]))"
-      ]
-     },
-     "execution_count": 119,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Peng\\AppData\\Local\\Temp/ipykernel_9536/3093484265.py:1: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  X = torch.tensor(X).type(torch.float)\n",
+      "C:\\Users\\Peng\\AppData\\Local\\Temp/ipykernel_9536/3093484265.py:2: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  y=torch.tensor(y).type(torch.float)\n"
+     ]
     }
    ],
    "source": [
     "X = torch.tensor(X).type(torch.float)\n",
     "y=torch.tensor(y).type(torch.float)\n",
-    "X,y"
+    "print(X,\"\\n\", y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 129,
    "id": "d7a2f87d-9494-4c80-bf24-541aa32b72cc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create the loss function\n",
-    "loss_fn = nn.MSELoss() # MAE loss is same as L1Loss\n",
-    "\n",
-    "# Create the optimizer\n",
-    "optimizer = torch.optim.SGD(params=model.parameters(), # parameters of target model to optimize\n",
-    "                            lr=0.001) # learning rate (how much the optimizer should change parameters at each step, higher=more (less stable), lower=less (might take a long time))"
+    "loss_fn = nn.MSELoss() \n",
+    "optimizer = torch.optim.Adam(params=model2.parameters(),lr=0.05)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 130,
    "id": "462d5ed8-7aba-41aa-9033-fa2ea17a9d81",
    "metadata": {},
    "outputs": [
@@ -191,140 +193,85 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "671.14185\n",
-      "608.75745\n",
-      "591.7281\n",
-      "586.4026\n",
-      "584.0993\n",
-      "582.5786\n",
-      "581.2627\n",
-      "580.0024\n",
-      "578.7592\n",
-      "577.5234\n",
-      "576.29205\n",
-      "575.0649\n",
-      "573.8415\n",
-      "572.6218\n",
-      "571.40594\n",
-      "570.19366\n",
-      "568.98517\n",
-      "567.78033\n",
-      "566.5792\n",
-      "565.3817\n",
-      "564.18787\n",
-      "562.99774\n",
-      "561.81116\n",
-      "560.62823\n",
-      "559.4489\n",
-      "558.2732\n",
-      "557.1011\n",
-      "555.93243\n",
-      "554.7674\n",
-      "553.60596\n",
-      "552.44806\n",
-      "551.2937\n",
-      "550.14276\n",
-      "548.9954\n",
-      "547.8515\n",
-      "546.71106\n",
-      "545.5741\n",
-      "544.44055\n",
-      "543.31055\n",
-      "542.1839\n",
-      "541.0607\n",
-      "539.9409\n",
-      "538.82446\n",
-      "537.71155\n",
-      "536.6019\n",
-      "535.49567\n",
-      "534.39276\n",
-      "533.29315\n",
-      "532.19696\n",
-      "531.104\n",
-      "530.0144\n",
-      "528.92816\n",
-      "527.8451\n",
-      "526.76544\n",
-      "525.68896\n",
-      "524.6157\n",
-      "523.5458\n",
-      "522.4791\n",
-      "521.41565\n",
-      "520.35535\n",
-      "519.2982\n",
-      "518.2443\n",
-      "517.19366\n",
-      "516.1461\n",
-      "515.10175\n",
-      "514.0605\n",
-      "513.0225\n",
-      "511.98755\n",
-      "510.95575\n",
-      "509.92703\n",
-      "508.90137\n",
-      "507.8788\n",
-      "506.8594\n",
-      "505.84308\n",
-      "504.82977\n",
-      "503.8195\n",
-      "502.81232\n",
-      "501.80807\n",
-      "500.807\n",
-      "499.80878\n",
-      "498.81366\n",
-      "497.82156\n",
-      "496.8323\n",
-      "495.84607\n",
-      "494.86288\n",
-      "493.88257\n",
-      "492.90524\n",
-      "491.93082\n",
-      "490.95935\n",
-      "489.9907\n",
-      "489.02502\n",
-      "488.06226\n",
-      "487.10236\n",
-      "486.14532\n",
-      "485.19125\n",
-      "484.23984\n",
-      "483.29147\n",
-      "482.34583\n",
-      "481.40305\n",
-      "480.46307\n"
+      "491.0019\n",
+      "186.2034\n",
+      "146.0051\n",
+      "112.335915\n",
+      "85.022865\n",
+      "63.594757\n",
+      "47.238007\n",
+      "35.052387\n",
+      "26.16895\n",
+      "19.810808\n",
+      "15.322426\n",
+      "12.177272\n",
+      "9.971304\n",
+      "8.407397\n",
+      "7.275837\n",
+      "6.434041\n",
+      "5.7882786\n",
+      "5.2785254\n",
+      "4.8669496\n",
+      "4.529629\n",
+      "4.251052\n",
+      "4.020589\n",
+      "3.8304353\n",
+      "3.6743927\n",
+      "3.5472767\n",
+      "3.4445996\n",
+      "3.3624184\n",
+      "3.297274\n",
+      "3.2461464\n",
+      "3.2064197\n",
+      "3.1758676\n",
+      "3.1526198\n",
+      "3.1351159\n",
+      "3.1220791\n",
+      "3.1124794\n",
+      "3.105484\n",
+      "3.1004486\n",
+      "3.096865\n",
+      "3.0943437\n",
+      "3.0925944\n"
      ]
     }
    ],
    "source": [
     "torch.manual_seed(42)\n",
-    "epochs = 100\n",
-    "for epoch in range(epochs):\n",
-    "    # Put model in training mode (this is the default state of a model)\n",
-    "    model.train()\n",
-    "\n",
-    "    # 1. Forward pass on train data using the forward() method inside \n",
-    "    y_pred = model(X)\n",
-    "\n",
-    "    # 2. Calculate the loss (how different are our models predictions to the ground truth)\n",
-    "    loss = loss_fn(y_pred, y)\n",
-    "    print(loss.detach().numpy())\n",
-    "\n",
-    "    # 3. Zero grad of the optimizer\n",
+    "epochs = 2000\n",
+    "for epoch in range(epochs):    \n",
+    "    model2.train()\n",
+    "    y_pred = model2(X)\n",
+    "    loss = loss_fn(y_pred, y.reshape(-1, 1))\n",
+    "    if epoch%50==0:\n",
+    "        print(f'{loss.detach().numpy()}')\n",
     "    optimizer.zero_grad()\n",
-    "\n",
-    "    # 4. Loss backwards\n",
     "    loss.backward()\n",
-    "\n",
-    "    # 5. Progress the optimizer\n",
     "    optimizer.step()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d4ec858a-10d5-489d-aa6f-47772678add5",
+   "execution_count": 131,
+   "id": "6f2c7502-81fb-4721-b99c-58e04abd3942",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[22.6460],\n",
+      "        [23.8431],\n",
+      "        [25.5043],\n",
+      "        [30.9423],\n",
+      "        [50.0219]], grad_fn=<AddmmBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_preds = model2(X)\n",
+    "print(y_preds)"
+   ]
   }
  ],
  "metadata": {
