--- a/nvidia_coding_prep.ipynb
+++ b/nvidia_coding_prep.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMpLJUm5QHymbDUgQhsQeAL",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNEeBqk89TyG5YNLPZylDtK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -89,7 +90,7 @@
       "metadata": {
         "id": "G5zgrBgy314n"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -106,7 +107,7 @@
         "id": "Lq1GlfSK4Lu5",
         "outputId": "57f1179f-0078-4e59-ea11-2cc03eee4496"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -157,7 +158,7 @@
         "id": "ESFxNRpy4P_f",
         "outputId": "50e54515-6b0b-4aaf-f95e-4669582e6dac"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -194,7 +195,7 @@
         "id": "T6PYVj_-6BeO",
         "outputId": "b7da1210-59a6-4f26-807f-cdd897f6a7ef"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -236,7 +237,7 @@
       "metadata": {
         "id": "E849bTwY6SgG"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -247,7 +248,7 @@
       "metadata": {
         "id": "jUoFJ5MQ8zi9"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -259,7 +260,7 @@
       "metadata": {
         "id": "se6MUYro9ueD"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -274,7 +275,7 @@
         "id": "TL2Ext1T9cGL",
         "outputId": "663e50c4-ed0e-4804-a8a9-2cec566431cc"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -320,7 +321,7 @@
         "id": "oowrlK4F_pOj",
         "outputId": "504b03f9-aaac-4c9a-dd47-86067f5c4899"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -345,7 +346,7 @@
       "metadata": {
         "id": "HvwaWv1Z9gHq"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -356,7 +357,7 @@
       "metadata": {
         "id": "vLHJXFebBA89"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -399,7 +400,7 @@
       "metadata": {
         "id": "_lYJFNwiLIti"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -423,7 +424,7 @@
       "metadata": {
         "id": "9cMQ3Ihxijvz"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -437,7 +438,7 @@
       "metadata": {
         "id": "Ao3A6i0UUsdK"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -461,7 +462,7 @@
       "metadata": {
         "id": "tyNV5JwQvVNI"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -475,7 +476,7 @@
       "metadata": {
         "id": "jSfIgdDJwmkn"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -490,7 +491,7 @@
         "id": "dxc1sQJYwqeh",
         "outputId": "f02b4569-516f-47b7-fa03-9bdd5461a5ce"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -516,7 +517,7 @@
         "id": "pzlhndwgxlCy",
         "outputId": "d4d4959a-fc41-4ac8-8e10-ab85b5398c63"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -562,7 +563,7 @@
       "metadata": {
         "id": "DLkN7qPtxsq4"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -577,7 +578,7 @@
         "id": "aHFMKcRC2QJW",
         "outputId": "a411e7ea-431a-4f33-95a2-b912896ecbee"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -620,7 +621,7 @@
       "metadata": {
         "id": "rsmlmKJu3LBj"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -631,7 +632,7 @@
       "metadata": {
         "id": "IxcXzP7JCpTd"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -647,7 +648,7 @@
         "id": "QYkQuV_nCsXJ",
         "outputId": "d6ed0585-3ea4-470d-bc12-4625dee1497a"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -682,7 +683,7 @@
       "metadata": {
         "id": "wtuMkUIKC7mr"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -697,7 +698,7 @@
         "id": "CXLFWlb6FNrv",
         "outputId": "2014b1e1-e209-4488-dcc2-e3cbb4077c53"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -720,6 +721,282 @@
       "source": [],
       "metadata": {
         "id": "0avHAYolFaR5"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Circle target problem"
+      ],
+      "metadata": {
+        "id": "jAMyGNQQwRst"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Create a loss function to calcualte how many points are outside the circle"
+      ],
+      "metadata": {
+        "id": "eoq8AQz70K6A"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "sample=torch.randint(0,100,(100,2))\n",
+        "sample"
+      ],
+      "metadata": {
+        "id": "Z9Smw9Mqwxi4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "out_targe_pt = 0\n",
+        "for i in range (len(sample)):\n",
+        "  if math.sqrt((sample[i][0]-30)**2+(sample[i][1]-50)**2)>15:\n",
+        "    out_targe_pt+=1\n",
+        "out_targe_pt"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pdfcg2Dkxbfu",
+        "outputId": "191bdc1c-dae9-4c86-8644-85040e94f1ad"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "96"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def loss_fn1 (pred):\n",
+        "  out_targe_pt = 0\n",
+        "  for i in range (len(pred)):\n",
+        "    if math.sqrt((pred[i][0]-30)**2+(pred[i][1]-50)**2)>15:\n",
+        "      out_targe_pt+=1\n",
+        "  return out_targe_pt"
+      ],
+      "metadata": {
+        "id": "co8vPrprwVTI"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss_fn1(sample)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "F-n9Zz3jz8Xa",
+        "outputId": "1da80e4c-91f8-47a5-9bf3-59b4206a3100"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "96"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Create a loss function to minimize the total displacement"
+      ],
+      "metadata": {
+        "id": "5hoJKHAY0bSw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def loss_fn2 (sample,pred):\n",
+        "  total_disp = 0\n",
+        "  for i in range (len(pred)):\n",
+        "    disp=math.sqrt((pred[i][0]-sample[i][0])**2+(pred[i][1]-sample[i][0])**2)\n",
+        "    total_disp+=disp\n",
+        "  return loss_fn1 (pred)+total_disp"
+      ],
+      "metadata": {
+        "id": "aQRgjChM0Vdr"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2D samples"
+      ],
+      "metadata": {
+        "id": "sU0Amfu96nRv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed=21\n",
+        "sample1=torch.randint(0,100,(50,50,2))\n",
+        "sample1"
+      ],
+      "metadata": {
+        "id": "8tu6q7hf2T8D"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed=42\n",
+        "sample2=torch.randint(0,100,(50,50,2))\n",
+        "sample2"
+      ],
+      "metadata": {
+        "id": "216zZ07T3uES"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calculate the displacement of each point\n",
+        "diff = sample2-sample1\n",
+        "diff"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AnhjBSHE3_da",
+        "outputId": "5e6fe91b-89f1-44f2-8e09-494516feac00"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[ 26,  25],\n",
+              "         [-73, -13],\n",
+              "         [-39,  26],\n",
+              "         ...,\n",
+              "         [  3,   3],\n",
+              "         [ 53, -23],\n",
+              "         [ -2, -18]],\n",
+              "\n",
+              "        [[ 53,  60],\n",
+              "         [-41,  74],\n",
+              "         [ 77,   5],\n",
+              "         ...,\n",
+              "         [-45,  56],\n",
+              "         [ 58, -47],\n",
+              "         [  5,   9]],\n",
+              "\n",
+              "        [[ 23,  19],\n",
+              "         [ 76,  11],\n",
+              "         [ 12,  63],\n",
+              "         ...,\n",
+              "         [ 57, -66],\n",
+              "         [ 43, -55],\n",
+              "         [ 18,  37]],\n",
+              "\n",
+              "        ...,\n",
+              "\n",
+              "        [[-52,  22],\n",
+              "         [-79,  94],\n",
+              "         [ 14, -49],\n",
+              "         ...,\n",
+              "         [ 36, -43],\n",
+              "         [ 18,  48],\n",
+              "         [-26,  94]],\n",
+              "\n",
+              "        [[ 52, -12],\n",
+              "         [-19,  37],\n",
+              "         [-66,  64],\n",
+              "         ...,\n",
+              "         [ 29, -15],\n",
+              "         [ 81, -38],\n",
+              "         [ 26, -79]],\n",
+              "\n",
+              "        [[ 25,  77],\n",
+              "         [  1, -58],\n",
+              "         [-52,  21],\n",
+              "         ...,\n",
+              "         [ 10, -63],\n",
+              "         [ 58, -52],\n",
+              "         [ 11,   5]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Convolution layer"
+      ],
+      "metadata": {
+        "id": "CTwZmzF32pBO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from torch import nn\n",
+        "conv2d = nn.Conv2d(in_channels=2,\n",
+        "                   out_channels=10,\n",
+        "                   kernel_size=3)"
+      ],
+      "metadata": {
+        "id": "HBhMqfim5uTF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "layers = nn.Sequential(nn.Conv2d(in_channels=2,out_channels=10,kernel_size=3,padding=1),\n",
+        "                       nn.ReLU()\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "wCxI51Wb7Aqe"
       },
       "execution_count": null,
       "outputs": []
